Fix overflow scrollbars

--- a/src/assets/styles/components/Toolbar.scss
+++ b/src/assets/styles/components/Toolbar.scss
@@ -91,7 +91,7 @@
   border-bottom: 1px solid $color-g-100;
   padding: 1rem 0 3rem;
   margin: 0;
-  overflow-x: scroll;
+  overflow-y: scroll;
   height: calc(100% - 200px);
 }
 
